--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
+        <script src="https://kit.fontawesome.com/2e56720cee.js" crossorigin="anonymous"></script>
         <title> Shimbo Akito's HP</title>
     </head>
 
@@ -12,6 +13,11 @@
                 <li>名前：新保 彰人</li>
                 <li>所属：東京工業大学　情報理工学院　情報工学系　徳永研究室</li>
             </ul>
+            <i class="fa-solid fa-camera"></i>
         </div>
+
+        <p>
+            <a href="./works/index.html">作品一覧</a>
+        </p>
     </body>
 </html>
