--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <li>名前：新保 彰人</li>
                 <li>所属：東京工業大学　情報理工学院　情報工学系　徳永研究室</li>
             </ul>
-            <i class="cat"></i>
+            <i class="fa-solid fa-cat"></i>
         </div>
 
         <p>
