--- a/works/counter.html
+++ b/works/counter.html
@@ -8,5 +8,6 @@
     <body>カウンター
     <div id="count">回数: 0</div>
     <button onclick="countUp()">クリック！</button>
+    <button onclick="reset()">リセット</button>
     </body>
 </html>
