--- a/index.html
+++ b/index.html
@@ -8,14 +8,34 @@
 
     <body>
         <div>
-            <h2>基本情報</h2>
+            <h2>Profile</h2>
             <ul>
                 <li>名前：新保 彰人</li>
                 <li>所属：東京工業大学　情報理工学院　情報工学系　徳永研究室</li>
+                <li>専門：自然言語処理</li>
+                <li>GitHub <i class="fa-brands fa-github"></i>：<a href="https://github.com/ShimboAkito">ShimboAkito</a></li>
+                <li>Twitter <i class="fa-brands fa-twitter"></i>：<a href="https://twitter.com/shimbo_akito">@shimbo_akito</a></li>
             </ul>
-            <i class="fa-solid fa-cat"></i>
+        </div>
+        <div>
+            <h2>Education</h2>
+            <ul>
+                <li>2019.4~2023.3<br>東京工業大学情報理工学院情報工学系</li><br>
+                <li>2023.4~予定<br>東京工業大学大学院情報理工学院情報工学系知能情報コース</li>
+            </ul>
         </div>
 
+        <div>
+            <h2>Publications</h2>
+            <ul>
+                <li><a href="https://www.anlp.jp/proceedings/annual_meeting/2023/pdf_dir/A7-2.pdf">参照例を使わないキャッチコピーの自動評価</a>. 新保彰人, 山田寛章, 徳永健伸. 言語処理学会第29回年次大会. March, 2023
+                <br><b>委員特別賞受賞</b>
+                <br><b>スポンサー賞（サイバーエージェント賞）受賞</b>
+            </li>
+            </ul>
+        </div>
+
+        <div></div>
         <p>
             <a href="./works/index.html">作品一覧</a>
         </p>
