--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
+    
     <head>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
         <meta charset="UTF-8">
         <script src="https://kit.fontawesome.com/2e56720cee.js" crossorigin="anonymous"></script>
         <title> Shimbo Akito's HP</title>
