--- a/index.html
+++ b/index.html
@@ -37,6 +37,26 @@
             </ul>
         </div>
 
+        <div>
+            <h2>Career</h2>
+            <ul>   
+                <li>2023.6（一ヶ月）株式会社PKSHA<br>
+                    <br>Directional Stimulus Promptinの研究など
+                </li>
+                <li>
+                    2023.7~ 株式会社IVRy<br>
+                    <br>自動質問応答システムの開発（予定）
+                </li>
+                <li>
+                    2023.8~（予定）三井住友信託銀行<br>
+                    <br>市場のセンチメント分析（予定）
+                </li>
+                <li>
+                    2023.10~（予定）株式会社リクルート<br>
+                </li>
+            </ul>
+        </div>
+
         <div></div>
         <p>
             <a href="./works/index.html">作品一覧</a>
