--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
         <div>
             <h2>Career</h2>
             <ul>   
-                <li>2023.6（一ヶ月）株式会社PKSHA<br>
-                    <br>Directional Stimulus Promptinの研究など
+                <li>2023.6（一ヶ月）株式会社PKSHA
+                    <br>Directional Stimulus Promptinの研究など<br>
                 </li>
                 <li>
-                    2023.7~ 株式会社IVRy<br>
-                    <br>自動質問応答システムの開発（予定）
+                    2023.7~ 株式会社IVRy
+                    <br>自動質問応答システムの開発（予定）<br>
                 </li>
                 <li>
-                    2023.8~（予定）三井住友信託銀行<br>
-                    <br>市場のセンチメント分析（予定）
+                    2023.8~（予定）三井住友信託銀行
+                    <br>市場のセンチメント分析（予定）<br>
                 </li>
                 <li>
                     2023.10~（予定）株式会社リクルート<br>
