--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
         <div>
             <h2>Career</h2>
+            インターン
             <ul>   
                 <li>2023.6（一ヶ月）株式会社PKSHA
                     <br>Directional Stimulus Promptinの研究など<br>
