--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2>Education</h2>
             <ul>
                 <li>2019.4~2023.3<br>東京工業大学情報理工学院情報工学系</li><br>
-                <li>2023.4~予定<br>東京工業大学大学院情報理工学院情報工学系知能情報コース</li>
+                <li>2023.4~<br>東京工業大学大学院情報理工学院情報工学系知能情報コース</li>
             </ul>
         </div>
 
@@ -34,6 +34,10 @@
                 <br><b>委員特別賞受賞</b>
                 <br><b>スポンサー賞（サイバーエージェント賞）受賞</b>
             </li>
+            <li>
+                <a href="https://ebooks.iospress.nl/volumearticle/65606">Nearest Neighbor Search for Summarization of Japanese Judgment Documents</a>. Akito Shimbo, Yuta Sugawara, Hiroaki Yamada, and Takenobu Tokunaga. JURIX2023, December, 2023
+                <b>現地にて口頭発表</b>
+            </li>
             </ul>
         </div>
 
@@ -42,25 +46,26 @@
             インターン
             <ul>   
                 <li>2023.6（一ヶ月）株式会社PKSHA
-                    <br>Directional Stimulus Promptinの研究など<br>
+                    <br>Directional Stimulus Promptingの研究など<br>
                 </li>
                 <li>
-                    2023.7~ 株式会社IVRy
-                    <br>自動質問応答システムの開発（予定）<br>
+                    2023.7~現在 株式会社IVRy
+                    <br>自動質問応答システムの開発<br>
                 </li>
                 <li>
-                    2023.8~（予定）三井住友信託銀行
-                    <br>市場のセンチメント分析（予定）<br>
+                    2023.8~ 三井住友信託銀行
+                    <br>ニュース記事を利用した市場のセンチメント分析<br>
                 </li>
                 <li>
-                    2023.10~（予定）株式会社リクルート<br>
+                    2023.10~2023.12 株式会社リクルート<br>
+                    <br>英語要約問題の自動評価の研究<br>
                 </li>
             </ul>
         </div>
 
         <div></div>
         <p>
-            <a href="./works/index.html">作品一覧</a>
+            
         </p>
     </body>
 </html>
