--- a/index.html
+++ b/index.html
@@ -31,35 +31,12 @@
             <h2>Publications</h2>
             <ul>
                 <li><a href="https://www.anlp.jp/proceedings/annual_meeting/2023/pdf_dir/A7-2.pdf">参照例を使わないキャッチコピーの自動評価</a>. 新保彰人, 山田寛章, 徳永健伸. 言語処理学会第29回年次大会. March, 2023
-                <br><b>委員特別賞受賞</b>
-                <br><b>スポンサー賞（サイバーエージェント賞）受賞</b>
+                <br>委員特別賞受賞
+                <br>スポンサー賞（サイバーエージェント賞）受賞
             </li>
             <li>
                 <a href="https://ebooks.iospress.nl/volumearticle/65606">Nearest Neighbor Search for Summarization of Japanese Judgment Documents</a>. Akito Shimbo, Yuta Sugawara, Hiroaki Yamada, and Takenobu Tokunaga. JURIX2023, December, 2023
-                <b>現地にて口頭発表</b>
             </li>
-            </ul>
-        </div>
-
-        <div>
-            <h2>Career</h2>
-            インターン
-            <ul>   
-                <li>2023.6（一ヶ月）株式会社PKSHA
-                    <br>Directional Stimulus Promptingの研究など<br>
-                </li>
-                <li>
-                    2023.7~現在 株式会社IVRy
-                    <br>自動質問応答システムの開発<br>
-                </li>
-                <li>
-                    2023.8~ 三井住友信託銀行
-                    <br>ニュース記事を利用した市場のセンチメント分析<br>
-                </li>
-                <li>
-                    2023.10~2023.12 株式会社リクルート<br>
-                    <br>英語要約問題の自動評価の研究<br>
-                </li>
             </ul>
         </div>
 
