update publication and style.css

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <h2>Profile</h2>
             <ul>
                 <li>名前：新保 彰人</li>
-                <li>所属：東京工業大学　情報理工学院　情報工学系　徳永研究室</li>
+                <li>所属：東京科学大学　情報理工学院　情報工学系　徳永研究室</li>
                 <li>専門：自然言語処理</li>
                 <li>GitHub <i class="fa-brands fa-github"></i>：<a href="https://github.com/ShimboAkito">ShimboAkito</a></li>
-                <li>Twitter <i class="fa-brands fa-twitter"></i>：<a href="https://twitter.com/shimbo_akito">@shimbo_akito</a></li>
+                <li>Twitter <i class="fa-brands fa-x-twitter"></i>：<a href="https://twitter.com/shimbo_akito">@shimbo_akito</a></li>
             </ul>
         </div>
         <div>
@@ -37,10 +37,13 @@
             <li>
                 <a href="https://ebooks.iospress.nl/volumearticle/65606">Nearest Neighbor Search for Summarization of Japanese Judgment Documents</a>. Akito Shimbo, Yuta Sugawara, Hiroaki Yamada, and Takenobu Tokunaga. JURIX2023, December, 2023
             </li>
+            <li>
+                <a href="https://www.anlp.jp/proceedings/annual_meeting/2025/pdf_dir/P5-10.pdf">判決書要約文の自動評価</a>. 新保彰人, 山田寛章, 徳永健伸. 言語処理学会第31回年次大会. March, 2025
+                <br>若手奨励賞受賞
+            </li>
             </ul>
         </div>
 
-        <div></div>
 
     </body>
 </html>
