--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
             <h2>Profile</h2>
             <ul>
                 <li>名前：新保 彰人</li>
-                <li>所属：東京科学大学　情報理工学院　情報工学系　徳永研究室</li>
                 <li>専門：自然言語処理</li>
                 <li>GitHub <i class="fa-brands fa-github"></i>：<a href="https://github.com/ShimboAkito">ShimboAkito</a></li>
                 <li>Twitter <i class="fa-brands fa-x-twitter"></i>：<a href="https://twitter.com/shimbo_akito">@shimbo_akito</a></li>
@@ -23,7 +22,7 @@
             <h2>Education</h2>
             <ul>
                 <li>2019.4~2023.3<br>東京工業大学情報理工学院情報工学系</li><br>
-                <li>2023.4~<br>東京工業大学大学院情報理工学院情報工学系知能情報コース</li>
+                <li>2023.4~2025.3<br>東京工業大学大学院情報理工学院情報工学系知能情報コース</li>
             </ul>
         </div>
 
