--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li>名前：新保 彰人</li>
                 <li>専門：自然言語処理</li>
                 <li>GitHub <i class="fa-brands fa-github"></i>：<a href="https://github.com/ShimboAkito">ShimboAkito</a></li>
-                <li>Twitter <i class="fa-brands fa-x-twitter"></i>：<a href="https://twitter.com/shimbo_akito">@shimbo_akito</a></li>
+                <li>X <i class="fa-brands fa-x-twitter"></i>：<a href="https://twitter.com/shimbo_akito">@shimbo_akito</a></li>
             </ul>
         </div>
         <div>
